--- a/package.json
+++ b/package.json
@@ -28,12 +28,17 @@
     "@vitest/coverage-v8": "^4.0.18",
     "memfs": "^4.56.10",
     "pyrajs-cli": "workspace:*",
-    "tsup": "^8.5.0",
+    "tsup": "^8.5.1",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "vitest": "^4.0.18"
   },
   "dependencies": {
     "@types/node": "^24.10.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "sucrase": "^3.35.1"
+    }
   }
 }
